### 18-Oct-2023 - MDD - Version 3.7.1
    - Updates to reconcile the old and new algorithms for flagging full-well saturated pixels.  
      The new algorithm uses a saturation image which is applied after BLECORR/BIASCORR, and
      the image is already trimmed of the overscan regions. The old algorithm used a single
      scalar value applied to the ENTIRE readout (science data and overscan).  Added flagging 
      in DQICORR of the overscan regions when the saturation image of the new algorithm is to 
      be applied later in the processing.

### 08-Jun-2023 - MDD - Version 3.7.0
    - Implementation to use an image to detect and flag full-well saturation versus a simple scalar.
      The new routine, dofwsat.c, is similar to what has been done for calacs. The WFC3 implementation
      is more complicated in that there are serial virtual overscan columns, as well as binned images,
      to accommodate.  The detection/flagging occurs after blev and bias corrections while the output is
      still in counts.  If the SATUFILE keyword is missing from the FITS header, or the keyword does
      not have a valid filename as a value, the code will revert to using the original method of flagging
      full-well saturation.  The flagging will be done in doDQI and use a single value as the saturation 
      threshold.

### 27-May-2021 - MDD - Version 3.6.2
    - Bug fix to address calwf3.e crashing (Abort trap: 6) when taking an existing *_ima.fits (IR) file
      (produced with FLATCORR=PERFORM and CRCORR=OMIT) with CRCORR set to PERFORM. This reentrant
      processing is fundamental to being able to remove the variable IR background during the course
      of an exposure. Problem: char variable declared too small to hold its largest possible contents.

### 28-Apr-2021 - MDD - Version 3.6.1
    - Bug fix to address a problem detected when processing a Tungsten flat with a high background.